# legocollector

./: .coveragerc  .env_vars  .gitignore  .pylintrc  .sonarcloud.properties  .travis.yml  README.md  pytest.ini  requirements.txt  setup.cfg  tmp.txt  tox.ini
#Documents/Design/: Design Thoughts.txt
#Documents/Design/Database/: LegoCollector_MASTER.dia  LegoCollector_v03.dia  LegoCollector_v04.dia  LegoCollector_v05.dia
Requirements/: requirements-release-unpinned.txt  requirements-testing.txt
dev/: profile_PYTHON_PROG.bat  run_linters.sh  run_tests.bat  run_tests.sh
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Testing/: RunDjangoTests.bat  RunDjangoTests.sh  RunPytest.bat  RunPytest.sh
legocollector/: __init__.py  manage.py  settings.py  test.json  test_fail.py  urls.py  wsgi.py
legocollector/common/util/: url_helper.py
legocollector/inventory/: admin.py  fields.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py  widgets.py
legocollector/inventory/migrations/: 0001_initial.py  0002_userpart_qty.py  0003_auto_20190907_2104.py  (+28 more)
legocollector/legocollector/: settings.py  urls.py
legocollector/templates/: base.html  index.html
legocollector/utils/: ldraw_studcount.json  ldraw_studcount_parser.py  tmp.txt
scripts/: data_import.bat  scrape_rebrickable_data.bat
tests/utils/: test_ldraw_studcount_parser.py
utils/: ldraw_studcount_parser.py
(+35 files in other folders)
