[bdist_wheel]
universal = true

[metadata]
name = "legocollector"
version = v0.4
author = Eric Ziethen
author-email = ericziethen@gmail.com
home-page = https://github.com/ericziethen/legocollector
description = LEGO inventory management
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
license = GNU GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
packages=find:

[options.packages.find]
exclude =
    tests
